--- a/prov/build.gradle
+++ b/prov/build.gradle
@@ -2,19 +2,27 @@ dependencies {
   implementation project(':core')
 }
 
-jar.archiveBaseName = "bcprov-$vmrange"
+jar.archiveBaseName = "bc-lts"
 
+
+
+jar {
+  from sourceSets.main.output
+  from rootProject.project(":core").sourceSets.main.output
+}
 
 task sourcesJar(type: Jar) {
   archiveBaseName = jar.archiveBaseName
   classifier = 'sources'
   from sourceSets.main.allSource
+  from rootProject.project(":core").sourceSets.main.allSource
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
   archiveBaseName = jar.archiveBaseName
   classifier = 'javadoc'
   from javadoc.destinationDir
+  from rootProject.project(":core").javadoc.destinationDir
 }
 
 artifacts {
@@ -23,3 +31,7 @@ artifacts {
   archives sourcesJar
 }
 
+task('copyJars', type:Copy) {
+  from new File(projectDir,"build/libs")
+  into new File(rootDir,"jars")
+}
