--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ stages:
   - test
   - testSSE
   - testAVX
+  - testVAES
 
 
 
@@ -21,10 +22,10 @@ test-code-sse:
     - "mkdir -p /tmp/bcfipslibs"
     - . cienv.sh
     - "gradle clean compileJava; \ cd native; \ ./build_linux.sh; \ cd .."
-    - "gradle withNative build  -x test"
+    - "gradle withNative build copyJars -x test"
     - "tmpLibDir=$(mktemp -d -t bc-libs-XXXXXXXXXX)"
     - "export LD_LIBRARY_PATH=\"$LD_LIBRARY_PATH:$tmpLibDir\""
-    - "java -Dorg.bouncycastle.native.cpu_variant=linux-x86_64-sse -cp core/build/libs/core-1.70.jar org.bouncycastle.util.DumpInfo"
+    - "java -Dorg.bouncycastle.native.cpu_variant=linux-x86_64-sse -cp jars/bc-lts-2.0.0-SNAPSHOT.jar org.bouncycastle.util.DumpInfo"
     - "gradle -Pskip.pqc.tests clean withNative build testSSE  -x test"
 
 
@@ -37,9 +38,23 @@ test-code-avx:
     - "mkdir -p /tmp/bcfipslibs"
     - . cienv.sh
     - "gradle clean compileJava; \ cd native; \ ./build_linux.sh; \ cd .."
-    - "gradle withNative build  -x test"
+    - "gradle withNative build copyJars -x test"
     - "tmpLibDir=$(mktemp -d -t bc-libs-XXXXXXXXXX)"
     - "export LD_LIBRARY_PATH=\"$LD_LIBRARY_PATH:$tmpLibDir\""
-    - "java -Dorg.bouncycastle.native.cpu_variant=linux-x86_64-avx -cp core/build/libs/core-1.70.jar org.bouncycastle.util.DumpInfo"
+    - "java -Dorg.bouncycastle.native.cpu_variant=linux-x86_64-avx -cp jars/bc-lts-2.0.0-SNAPSHOT.jar org.bouncycastle.util.DumpInfo"
     - "gradle -Pskip.pqc.tests clean withNative build testAVX  -x test"
 
+test-code-vaes:
+  stage: testVAES
+  script:
+    - "cat /proc/cpuinfo | grep avx"
+    - "apply_overlay bc-fips-2-0-X-java ./"
+    - "rm -rf /tmp/bcfipslibs"
+    - "mkdir -p /tmp/bcfipslibs"
+    - . cienv.sh
+    - "gradle clean compileJava; \ cd native; \ ./build_linux.sh; \ cd .."
+    - "gradle withNative build copyJars -x test"
+    - "tmpLibDir=$(mktemp -d -t bc-libs-XXXXXXXXXX)"
+    - "export LD_LIBRARY_PATH=\"$LD_LIBRARY_PATH:$tmpLibDir\""
+    - "java -Dorg.bouncycastle.native.cpu_variant=linux-x86_64-vaes -cp jars/bc-lts-2.0.0-SNAPSHOT.jar org.bouncycastle.util.DumpInfo"
+    - "gradle -Pskip.pqc.tests clean withNative build testVAES  -x test"
