Turned off darwin

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,9 +16,9 @@ native.intel.linux.x86_64.sse=true
 native.intel.linux.x86_64.avx=true
 native.intel.linux.x86_64.vaes=true
 
-# Darwin -- Presently not considered for fips certification.
-native.intel.darwin.x86_64.sse=true
-native.intel.darwin.x86_64.avx=true
+# Darwin -- No longer supported
+native.intel.darwin.x86_64.sse=false
+native.intel.darwin.x86_64.avx=false
 native.intel.darwin.x86_64.vaes=false
 
 
