--- a/mail/build.gradle
+++ b/mail/build.gradle
@@ -1,19 +1,71 @@
+import java.nio.file.CopyOption
+import java.nio.file.Files
+import java.nio.file.Paths
+import java.nio.file.StandardCopyOption
+import static ExtraFunctions.*
 
-dependencies {
-  implementation project(':core')
-  implementation project(':util')
-  implementation project(':pkix')
-  implementation project(':prov')
+jar.archiveBaseName = "bcmail-lts${vm_range}"
 
-  implementation group: 'javax.mail', name: 'mail', version: '1.4'
+sourceSets {
+    java9 {
+        java {
+            srcDirs = ['src/main/jdk1.9']
+        }
+    }
 }
 
-jar.archiveBaseName = "bcmail-lts"
+dependencies {
+  implementation project(':prov')
+  implementation project(':util')
+  implementation project(':pkix')
+
+  implementation group: 'javax.mail', name: 'mail', version: '1.4'
+  implementation files("$lts_prov")
+  implementation files("$lts_util")
+  implementation files("$lts_pkix")
+
+  java9Implementation project(':prov')
+  java9Implementation project(':util')
+  java9Implementation project(':pkix')
+  java9Implementation files(sourceSets.main.output.classesDirs) {
+     builtBy compileJava
+  }
+}
+
+compileJava {
+  javaCompiler = javaToolchains.compilerFor {
+    languageVersion = JavaLanguageVersion.of(8)
+  }
+}
+
+compileJava9Java {
+  javaCompiler = javaToolchains.compilerFor {
+    languageVersion = JavaLanguageVersion.of(9)
+  }
+  sourceCompatibility = 9
+  targetCompatibility = 9
+
+  options.compilerArgs += [
+                    '--module-path', "$lts_prov:$lts_util:$lts_pkix"
+  ]
+  options.sourcepath = files(['src/main/java', 'src/main/jdk1.9'])
+}
+
+jar {
+  from sourceSets.main.output
+  into('META-INF/versions/9') {
+    from sourceSets.java9.output
+  }
+  manifest.attributes('Multi-Release': 'true')
+}
 
 task sourcesJar(type: Jar) {
   archiveBaseName = jar.archiveBaseName
   classifier = 'sources'
   from sourceSets.main.allSource
+  into('META-INF/versions/9') {
+    from sourceSets.java9.allSource
+  }
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
@@ -32,3 +84,4 @@ task('copyJars', type:Copy) {
   from new File(projectDir,"build/libs")
   into new File(rootDir,"jars")
 }
+
