--- a/prov/build.gradle
+++ b/prov/build.gradle
@@ -1,14 +1,87 @@
-dependencies {
-  implementation project(':core')
+import java.nio.file.CopyOption
+import java.nio.file.Files
+import java.nio.file.Paths
+import java.nio.file.StandardCopyOption
+import static ExtraFunctions.*
+
+jar.archiveBaseName = "bcprov-lts$vm_range"
+
+sourceSets {
+    java9 {
+        java {
+            srcDirs = ['src/main/jdk1.9']
+        }
+    }
+    java11 {
+        java {
+            srcDirs = ['src/main/jdk1.11']
+        }
+    }
+    java15 {
+        java {
+            srcDirs = ['src/main/jdk1.15']
+        }
+    }
 }
 
-jar.archiveBaseName = "bc-lts"
+dependencies {
+  compile project(':core')
 
+  java9Implementation files([project(":core").sourceSets.main.output.classesDirs, sourceSets.main.output.classesDirs]) {
+     builtBy compileJava
+  }
+
+  java11Implementation files([project(":core").sourceSets.main.output.classesDirs, sourceSets.main.output.classesDirs, sourceSets.java9.output.classesDirs]) {
+     builtBy compileJava9Java
+  }
+
+  java15Implementation files([project(":core").sourceSets.main.output.classesDirs, sourceSets.main.output.classesDirs, sourceSets.java9.output.classesDirs, sourceSets.java11.output.classesDirs]) {
+     builtBy compileJava11Java
+  }
+}
+
+compileJava {
+  javaCompiler = javaToolchains.compilerFor {
+    languageVersion = JavaLanguageVersion.of(8)
+  }
+}
+
+compileJava9Java {
+  javaCompiler = javaToolchains.compilerFor {
+    languageVersion = JavaLanguageVersion.of(9)
+  }
+  sourceCompatibility = 9
+  targetCompatibility = 9
+
+  options.sourcepath = files(['../core/src/main/java', 'src/main/java', 'src/main/jdk1.9'])
+}
+
+compileJava11Java {
+  javaCompiler = javaToolchains.compilerFor {
+    languageVersion = JavaLanguageVersion.of(11)
+  }
+}
+
+compileJava15Java {
+  javaCompiler = javaToolchains.compilerFor {
+    languageVersion = JavaLanguageVersion.of(15)
+  }
+}
 
 
 jar {
   from sourceSets.main.output
   from rootProject.project(":core").sourceSets.main.output
+  into('META-INF/versions/9') {
+    from sourceSets.java9.output
+  }
+  into('META-INF/versions/11') {
+    from sourceSets.java11.output
+  }
+  into('META-INF/versions/15') {
+    from sourceSets.java15.output
+  }
+  manifest.attributes('Multi-Release': 'true')
 }
 
 task sourcesJar(type: Jar) {
@@ -16,9 +89,22 @@ task sourcesJar(type: Jar) {
   classifier = 'sources'
   from sourceSets.main.allSource
   from rootProject.project(":core").sourceSets.main.allSource
+  into('META-INF/versions/9') {
+    from sourceSets.java9.allSource
+  }
+  into('META-INF/versions/11') {
+    from sourceSets.java11.allSource
+  }
+  into('META-INF/versions/15') {
+    from sourceSets.java15.allSource
+  }
 }
 
-task javadocJar(type: Jar, dependsOn: javadoc) {
+task fullJavaDoc(type: Javadoc) {
+  source = files([sourceSets.main.allJava, project(":core").sourceSets.main.allJava])
+}
+
+task javadocJar(type: Jar, dependsOn: fullJavaDoc) {
   archiveBaseName = jar.archiveBaseName
   classifier = 'javadoc'
   from javadoc.destinationDir
