--- a/prov/build.gradle
+++ b/prov/build.gradle
@@ -25,7 +25,7 @@ sourceSets {
 }
 
 dependencies {
-  compile project(':core')
+  implementation(project(':core'))
 
   java9Implementation files([project(":core").sourceSets.main.output.classesDirs, sourceSets.main.output.classesDirs]) {
      builtBy compileJava
