--- a/util/build.gradle
+++ b/util/build.gradle
@@ -17,6 +17,7 @@ sourceSets {
 dependencies {
 
   implementation project(':prov')
+  implementation files("${lts_prov}")
   testImplementation group: 'junit', name: 'junit', version: '4.11'
 
   java9Implementation project(':prov')
@@ -39,7 +40,7 @@ compileJava9Java {
   targetCompatibility = 9
 
   options.compilerArgs += [
-                    '--module-path', "$lts_prov"
+                    '--module-path', "${lts_prov}"
   ]
   options.sourcepath = files('src/main/java', 'src/main/jdk1.9')
 }
