--- a/tls/build.gradle
+++ b/tls/build.gradle
@@ -25,6 +25,8 @@ dependencies {
 
   implementation files("$lts_prov")
   implementation files("$lts_util")
+  testImplementation project(':pkix')
+
 
   java9Implementation files("$lts_prov")
   java9Implementation files("$lts_util")
