--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,24 +9,24 @@ stages:
 test-java-code:
   stage: test
   script:
-    - "apply_overlay bc-fips-2-0-X-java ./"
-    - . cienv.sh
-    - "gradle clean build -Pskip.pqc.tests"
+    - "apply_overlay bc-java ./"
+    - . cienv-11.sh
+    - "gradle cleangradle clean prov:build util:build pg:build pkix:build tls:build mail:build"
 
 test-code-sse:
   stage: testSSE
   script:
     - "cat /proc/cpuinfo | grep avx"
-    - "apply_overlay bc-fips-2-0-X-java ./"
+    - "apply_overlay bc-java ./"
     - "rm -rf /tmp/bcfipslibs"
     - "mkdir -p /tmp/bcfipslibs"
-    - . cienv.sh
+    - . cienv-11.sh
     - "gradle clean compileJava; \ cd native; \ ./build_linux.sh; \ cd .."
     - "gradle withNative build copyJars -x test"
     - "tmpLibDir=$(mktemp -d -t bc-libs-XXXXXXXXXX)"
     - "export LD_LIBRARY_PATH=\"$LD_LIBRARY_PATH:$tmpLibDir\""
     - "java -Dorg.bouncycastle.native.cpu_variant=linux-x86_64-sse -cp jars/bc-lts-2.0.0-SNAPSHOT.jar org.bouncycastle.util.DumpInfo"
-    - "gradle -Pskip.pqc.tests clean withNative build testSSE  -x test"
+    - "gradle -Pskip.pqc.tests clean withNative prov:build util:build pg:build pkix:build tls:build mail:build testSSE  -x test"
 
 
 test-code-avx:
@@ -42,7 +42,7 @@ test-code-avx:
     - "tmpLibDir=$(mktemp -d -t bc-libs-XXXXXXXXXX)"
     - "export LD_LIBRARY_PATH=\"$LD_LIBRARY_PATH:$tmpLibDir\""
     - "java -Dorg.bouncycastle.native.cpu_variant=linux-x86_64-avx -cp jars/bc-lts-2.0.0-SNAPSHOT.jar org.bouncycastle.util.DumpInfo"
-    - "gradle -Pskip.pqc.tests clean withNative build testAVX  -x test"
+    - "gradle -Pskip.pqc.tests clean withNative prov:build util:build pg:build pkix:build tls:build mail:build testAVX  -x test"
 
 test-code-vaes:
   stage: testVAES
@@ -57,4 +57,4 @@ test-code-vaes:
     - "tmpLibDir=$(mktemp -d -t bc-libs-XXXXXXXXXX)"
     - "export LD_LIBRARY_PATH=\"$LD_LIBRARY_PATH:$tmpLibDir\""
     - "java -Dorg.bouncycastle.native.cpu_variant=linux-x86_64-vaes -cp jars/bc-lts-2.0.0-SNAPSHOT.jar org.bouncycastle.util.DumpInfo"
-    - "gradle -Pskip.pqc.tests clean withNative build testVAES  -x test"
+    - "gradle -Pskip.pqc.tests clean withNative prov:build util:build pg:build pkix:build tls:build mail:build testVAES  -x test"
