--- a/pg/build.gradle
+++ b/pg/build.gradle
@@ -64,6 +64,12 @@ task sourcesJar(type: Jar) {
   }
 }
 
+javadoc {
+  title = "Bouncy Castle Library (LTS Edition) ${version} OpenPGP API"
+  options.windowTitle = "Bouncy Castle Library (LTS Edition) ${version} OpenPGP API"
+  options.overview = "overview.html"
+}
+
 task javadocJar(type: Jar, dependsOn: javadoc) {
   archiveBaseName = jar.archiveBaseName
   classifier = 'javadoc'
