--- a/mail/build.gradle
+++ b/mail/build.gradle
@@ -68,6 +68,12 @@ task sourcesJar(type: Jar) {
   }
 }
 
+javadoc {
+  title = "Bouncy Castle Library (LTS Edition) ${version} JavaMail API"
+  options.windowTitle = "Bouncy Castle Library (LTS Edition) ${version} JavaMail API"
+  options.overview = "overview.html"
+}
+
 task javadocJar(type: Jar, dependsOn: javadoc) {
   archiveBaseName = jar.archiveBaseName
   classifier = 'javadoc'
