--- a/core/build.gradle
+++ b/core/build.gradle
@@ -12,9 +12,8 @@ test {
     testLogging.showExceptions = true
     testLogging.showStackTraces = true
 
-    jvmArgs propValsAsArgs(project, test.name, "variant", "org.bouncycastle.native.cpu_variant"),
-            propValsAsArgs(project, test.name, "failsafe_skip", "test.bcfips.ignore.native");
-//  jvmArgs '-Dtest.bcfips.ignore.native=sha,gcm,cbc,ecb,rand,seed', '-Dorg.bouncycastle.native.cpu_variant=java'
+
+   jvmArgs '-Dtest.bcfips.ignore.native=sha,gcm,cbc,ecb,rand,seed', '-Dorg.bouncycastle.native.cpu_variant=java'
 
     filter {
         includeTestsMatching "AllTest*"
