Moved from default of bc-libs to bc-jni-libs, with backwards support for bc-libs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,9 +22,9 @@ test-code-sse:
     - . cienv-11.sh
     - "./gradlew clean core:compileJava; \ cd native; \ ./build_linux.sh; \ cd .."
     - "./gradlew clean cleanNativeVariants withNative prov:build util:build pg:build pkix:build tls:build mail:build copyJars -x test"
-    - "tmpLibDir=$(mktemp -d -t bc-libs-XXXXXXXXXX)"
+    - "tmpLibDir=$(mktemp -d -t bc-jni-libs-XXXXXXXXXX)"
     - "export LD_LIBRARY_PATH=\"$LD_LIBRARY_PATH:$tmpLibDir\""
-    - "java -Dorg.bouncycastle.native.cpu_variant=linux-x86_64-sse -cp jars/bcprov-lts8on-1.0.0-SNAPSHOT.jar org.bouncycastle.util.DumpInfo"
+    - "java -Dorg.bouncycastle.native.cpu_variant=sse -cp jars/bcprov-lts8on-1.0.0-SNAPSHOT.jar org.bouncycastle.util.DumpInfo"
     - "./gradlew -Pskip.pqc.tests testSSE  -x test"
 
 
@@ -37,9 +37,9 @@ test-code-avx:
     - . cienv-11.sh
     - "./gradlew clean core:compileJava; \ cd native; \ ./build_linux.sh; \ cd .."
     - "./gradlew clean cleanNativeVariants withNative prov:build util:build pg:build pkix:build tls:build mail:build copyJars -x test"
-    - "tmpLibDir=$(mktemp -d -t bc-libs-XXXXXXXXXX)"
+    - "tmpLibDir=$(mktemp -d -t bc-jni-libs-XXXXXXXXXX)"
     - "export LD_LIBRARY_PATH=\"$LD_LIBRARY_PATH:$tmpLibDir\""
-    - "java -Dorg.bouncycastle.native.cpu_variant=linux-x86_64-avx -cp jars/bcprov-lts8on-1.0.0-SNAPSHOT.jar org.bouncycastle.util.DumpInfo"
+    - "java -Dorg.bouncycastle.native.cpu_variant=avx -cp jars/bcprov-lts8on-1.0.0-SNAPSHOT.jar org.bouncycastle.util.DumpInfo"
     - "./gradlew -Pskip.pqc.tests testAVX  -x test"
 
 test-code-vaes:
@@ -51,7 +51,7 @@ test-code-vaes:
     - . cienv-11.sh
     - "./gradlew clean core:compileJava; \ cd native; \ ./build_linux.sh; \ cd .."
     - "./gradlew clean cleanNativeVariants withNative prov:build util:build pg:build pkix:build tls:build mail:build copyJars -x test"
-    - "tmpLibDir=$(mktemp -d -t bc-libs-XXXXXXXXXX)"
+    - "tmpLibDir=$(mktemp -d -t bc-jni-libs-XXXXXXXXXX)"
     - "export LD_LIBRARY_PATH=\"$LD_LIBRARY_PATH:$tmpLibDir\""
-    - "java -Dorg.bouncycastle.native.cpu_variant=linux-x86_64-vaes -cp jars/bcprov-lts8on-1.0.0-SNAPSHOT.jar org.bouncycastle.util.DumpInfo"
+    - "java -Dorg.bouncycastle.native.cpu_variant=vaes -cp jars/bcprov-lts8on-1.0.0-SNAPSHOT.jar org.bouncycastle.util.DumpInfo"
     - "./gradlew -Pskip.pqc.tests testVAES  -x test"
